/**
 * Copyright (c) Microsoft Corporation.
 * Licensed under the MIT License.
 *
 * @format
 */

import {dumpVisualTree} from '@react-native-windows/automation-commands';
import {goToComponentExample} from './RNTesterNavigation';
import {verifyNoErrorLogs} from './Helpers';
import {app} from '@react-native-windows/automation';

beforeAll(async () => {
  await goToComponentExample('View');
});

afterEach(async () => {
  await verifyNoErrorLogs();
});

describe('View Tests', () => {
  test('Control', () => {
    expect(true).toBe(true);
  });
  test('Views can have background color', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('bac');
    const componentsTab = await app.findElementByTestID('background-color');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('background-color');
    expect(dump).toMatchSnapshot();
  });
  test('Views can have opacity', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('opa');
    const componentsTab = await app.findElementByTestID('opacity-1');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('opacity-1');
    expect(dump).toMatchSnapshot();
  });
  // Disable until tests pass in CI.
  /*test('Views can have border styles', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('sty');
    const componentsTab = await app.findElementByTestID('border-style-button');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('border-style-button');
    expect(dump).toMatchSnapshot();
  });
  test('Views can have offscreen alpha compositing', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('off');
    const componentsTab = await app.findElementByTestID('offscreen-alpha-compositing-button');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('offscreen-alpha-compositing-button');
    expect(dump).toMatchSnapshot();
  });
  test('Views can have a z-index', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('z');
    const componentsTab = await app.findElementByTestID('z-index-button');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('z-index-button');
    expect(dump).toMatchSnapshot();
  });
  test('Views can have display: none', async () => {
    const searchBox = await app.findElementByTestID('example_search');
    await searchBox.addValue(['Backspace', 'Backspace', 'Backspace']);
    await searchBox.addValue('dis');
    const componentsTab = await app.findElementByTestID('display-none-button');
    await componentsTab.waitForDisplayed({timeout: 5000});
    const dump = await dumpVisualTree('display-none-button');
    expect(dump).toMatchSnapshot();
  });
  */
});
